--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
-    <title>徐美玲~2048</title>
+    <title>to徐妹妹</title>
     <link rel="stylesheet" type="text/css" href="2048.css" />
 	<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
    <!--  <script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script> -->
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>2048</h1>
+        <h1>徐美玲~2048</h1>
         <a href="javascript:newgame();" id="newgamebutton">New Game</a>
         <p>score : <span id="score">0</span></p>
     </header>
